# messenger-app

./: .gitignore  README.md
gui/: CMakeLists.txt  main.cpp
messenger_api/: CMakeLists.txt  main.cc
messenger_api/controllers/: api_v1_Messages.cc  api_v1_Messages.h  api_v1_User.cc  api_v1_User.h
messenger_api/test/: CMakeLists.txt
messenger_mobile/: README.md  pubspec.yaml
messenger_mobile/android/app/: build.gradle
messenger_mobile/android/app/src/main/: AndroidManifest.xml
messenger_mobile/android/app/src/main/kotlin/com/messengerapp/messenger_mobile/: MainActivity.kt
messenger_mobile/ios/Runner/: Info.plist
messenger_mobile/ios/Runner.xcodeproj/: project.pbxproj
messenger_mobile/test/: widget_test.dart
